tools/tests/errors/surf_lib_17.experr
fromhex: odd-length hex string
